; ModuleID = '/home/carl/AnghaBench/git/extr_archive-zip.c_entry_is_binary.c'
source_filename = "/home/carl/AnghaBench/git/extr_archive-zip.c_entry_is_binary.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.index_state = type { i32 }
%struct.userdiff_driver = type { i32 }

@.str = private unnamed_addr constant [8 x i8] c"default\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.index_state*, i8*, i8*, i64)* @entry_is_binary to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @entry_is_binary(%struct.index_state* %0, i8* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.index_state*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.userdiff_driver*, align 8
  store %struct.index_state* %0, %struct.index_state** %6, align 8
  store i8* %1, i8** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %11 = load %struct.index_state*, %struct.index_state** %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = call %struct.userdiff_driver* @userdiff_find_by_path(%struct.index_state* %11, i8* %12)
  store %struct.userdiff_driver* %13, %struct.userdiff_driver** %10, align 8
  %14 = load %struct.userdiff_driver*, %struct.userdiff_driver** %10, align 8
  %15 = icmp ne %struct.userdiff_driver* %14, null
  br i1 %15, label %18, label %16

16:                                               ; preds = %4
  %17 = call %struct.userdiff_driver* @userdiff_find_by_name(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  store %struct.userdiff_driver* %17, %struct.userdiff_driver** %10, align 8
  br label %18

18:                                               ; preds = %16, %4
  %19 = load %struct.userdiff_driver*, %struct.userdiff_driver** %10, align 8
  %20 = getelementptr inbounds %struct.userdiff_driver, %struct.userdiff_driver* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = icmp ne i32 %21, -1
  br i1 %22, label %23, label %27

23:                                               ; preds = %18
  %24 = load %struct.userdiff_driver*, %struct.userdiff_driver** %10, align 8
  %25 = getelementptr inbounds %struct.userdiff_driver, %struct.userdiff_driver* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 4
  store i32 %26, i32* %5, align 4
  br label %31

27:                                               ; preds = %18
  %28 = load i8*, i8** %8, align 8
  %29 = load i64, i64* %9, align 8
  %30 = call i32 @buffer_is_binary(i8* %28, i64 %29)
  store i32 %30, i32* %5, align 4
  br label %31

31:                                               ; preds = %27, %23
  %32 = load i32, i32* %5, align 4
  ret i32 %32
}

declare dso_local %struct.userdiff_driver* @userdiff_find_by_path(%struct.index_state*, i8*) #1

declare dso_local %struct.userdiff_driver* @userdiff_find_by_name(i8*) #1

declare dso_local i32 @buffer_is_binary(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
